<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/etName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:ems="10"
        android:hint="@string/cus_name"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/etSurname"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="8dp"
        android:ems="10"
        android:hint="@string/cus_surname"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etName" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fbtAdd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="40dp"
        android:layout_marginBottom="40dp"
        android:clickable="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@drawable/ic_add"
        tools:ignore="SpeakableTextPresentCheck,ImageContrastCheck" />

    <RadioGroup

        android:id="@+id/rg_gender"
        android:layout_width="102dp"
        android:layout_height="96dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="160dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etSurname">

        <RadioButton
            android:id="@+id/rbMan"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="0dp"
            android:layout_marginTop="0dp"
            android:text="@string/man" />

        <RadioButton
            android:id="@+id/rbWoman"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="0dp"
            android:layout_marginTop="0dp"
            android:minHeight="48dp"
            android:text="@string/woman" />
    </RadioGroup>

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="36dp"
        android:text="@string/plec"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etSurname" />

    <Button
        android:id="@+id/btEdit"
        android:layout_width="265dp"
        android:layout_height="51dp"
        android:text="@string/edit"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btClear" />

    <Button
        android:id="@+id/btClear"
        android:layout_width="200dp"
        android:layout_height="48dp"
        android:layout_marginTop="116dp"
        android:text="@string/clear"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etSurname" />

    <EditText
        android:id="@+id/etID"
        android:layout_width="91dp"
        android:layout_height="48dp"
        android:layout_marginStart="12dp"
        android:layout_marginEnd="8dp"
        android:ems="10"
        android:hint="@string/ghostID"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/btEdit"
        app:layout_constraintTop_toBottomOf="@+id/btClear" />

    <Button
        android:id="@+id/btShow"
        android:layout_width="200dp"
        android:layout_height="48dp"
        android:text="View"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/btClear" />

    <LinearLayout
        android:layout_width="376dp"
        android:layout_height="262dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:id="@+id/textViewOutput"
            android:layout_width="411dp"
            android:layout_height="250dp" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>